--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-        </div>
-               </h1>sobre a Escola<h1>
-
-    A escola alura foi fundada em 2010 com o objetivo de ensinar
-    programaçao atravez do VsCode. A melhor turma do colegio e o 2C
-    malvadeza, uma classe engajada, as vezes bagunceira, mas que 
-    entrega bons rsultados.
+        <section class="escola">
+              <div class="escola-div-conteudo">
 
 
-    </div>
+                 <h2 class="escola titulo">sobre a escola</h2>
+                 <p class="escola titulo-um"> A escola Alura foi fundada em 2010 com o objetivo de ensinar programacao atraves do VsCode.</p>
+                 <p class="escola titulo-dois">A  melhor turma do colegio é o 2C malvadeza, uma classe engajada, as vezes bagunceira, mas que entrega bons estudos.</p>
+
+     
+     
+</div>
+        </section>
+</body>
+</html>
